--- a/package.json
+++ b/package.json
@@ -7,7 +7,19 @@
     "test": "mocha --colors --recursive './test/**/*.test.js'"
   },
   "main": "./src/index.js",
-  "keywords": [],
+  "keywords": [
+    "atlassubbed",
+    "parser",
+    "tokenizer",
+    "utils",
+    "utility",
+    "stream",
+    "html",
+    "tags",
+    "text",
+    "nodes",
+    "async"
+  ],
   "author": "atlassubbed <atlassubbed@gmail.com>",
   "license": "Apache-2.0",
   "devDependencies": {
@@ -21,5 +33,8 @@
   "engines": {
     "node": "^10.1.0",
     "npm": "^6.0.1"
+  },
+  "dependencies": {
+    "atlas-seq-matcher": "^1.0.0"
   }
 }
