removes unix paths from test scripts

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.1.0",
   "description": "A super fast html-parser stream that outputs tag, text and closing nodes.",
   "scripts": {
-    "test-server": "mocha --colors --watch --recursive './test/**/*.test.js'",
-    "test": "mocha --colors --recursive './test/**/*.test.js'"
+    "test-server": "mocha --colors --watch --recursive",
+    "test": "mocha --colors --recursive"
   },
   "main": "./src/HtmlParser.js",
   "keywords": [
