--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "atlas-html-stream",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A super fast html-parser stream that outputs tag, text and closing nodes.",
   "scripts": {
-    "test-server": "mocha --colors --watch --recursive './test/**/*.test.js'",
-    "test": "mocha --colors --recursive './test/**/*.test.js'"
+    "test-server": "mocha --colors --watch --recursive",
+    "test": "mocha --colors --recursive"
   },
   "main": "./src/HtmlParser.js",
   "keywords": [
@@ -26,16 +26,12 @@
     "chai": "^4.1.2",
     "mocha": "^5.2.0"
   },
-  "os": [
-    "darwin",
-    "linux"
-  ],
   "engines": {
     "node": "^10.1.0",
     "npm": "^6.0.1"
   },
   "dependencies": {
-    "atlas-seq-matcher": "^1.0.0"
+    "atlas-seq-matcher": "^1.0.2"
   },
   "homepage": "https://github.com/atlassubbed/atlas-html-stream#readme",
   "bugs": "https://github.com/atlassubbed/atlas-html-stream/issues",
