--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "node": ">=10.1.0"
   },
   "dependencies": {
-    "atlas-seq-matcher": "^1.0.2"
+    "atlas-seq-matcher": "git@github.com:BonnierNews/atlas-html-stream.git"
   },
   "homepage": "https://github.com/atlassubbed/atlas-html-stream#readme",
   "bugs": "https://github.com/atlassubbed/atlas-html-stream/issues",
