--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@bonniernews/atlas-html-stream",
-  "version": "1.2.2",
+  "version": "2.0.0",
   "description": "A super fast html-parser stream that outputs tag, text and closing nodes.",
   "scripts": {
     "test-server": "mocha --colors --watch --recursive",
-    "test": "mocha --colors --recursive"
+    "test": "mocha --colors --recursive",
+    "posttest": "eslint . --cache"
   },
   "main": "./src/HtmlParser.js",
   "keywords": [
@@ -23,19 +24,20 @@
   "author": "atlassubbed <atlassubbed@gmail.com>",
   "license": "Apache-2.0",
   "devDependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^5.2.0"
+    "chai": "^4.3.4",
+    "eslint": "^8.4.1",
+    "mocha": "^9.1.3"
   },
   "engines": {
     "node": ">=10.1.0"
-  },
-  "dependencies": {
-    "@bonniernews/atlas-seq-matcher": "^1.0.3"
   },
   "homepage": "https://github.com/BonnierNews/atlas-html-stream#readme",
   "bugs": "https://github.com/BonnierNews/atlas-html-stream/issues",
   "repository": {
     "type": "git",
     "url": "https://github.com/BonnierNews/atlas-html-stream.git"
-  }
+  },
+  "files": [
+    "src"
+  ]
 }
