--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,8 @@
 {
-  "parserOptions": {
-    "ecmaVersion": 2021
-  },
-  "env": {
-    "node": true,
-    "es6": true
-  },
-  "extends": "eslint:recommended",
+  "root": true,
+  "extends": ["eslint-config-exp"],
   "rules": {
-    "no-console": 2
+    "no-return-assign": 0,
+    "no-unused-expressions": 0
   }
 }
