--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "chai": "^4.3.4",
-    "eslint": "^8.4.1",
+    "eslint": "^8.5.0",
+    "eslint-config-exp": "0.0.9",
     "mocha": "^9.1.3"
   },
   "engines": {
