--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   "author": "atlassubbed <atlassubbed@gmail.com>",
   "license": "Apache-2.0",
   "devDependencies": {
-    "chai": "^4.3.4",
-    "eslint": "^8.5.0",
-    "eslint-config-exp": "0.0.9",
-    "mocha": "^9.1.3",
+    "chai": "^4.3.6",
+    "eslint": "^8.23.0",
+    "eslint-config-exp": "^0.4.0",
+    "mocha": "^10.0.0",
     "nyc": "^15.1.0"
   },
   "engines": {
